# yast-vm

./: .gitignore  .travis.yml  MAINTAINER  README.md  configure.in.in  yast2-vm.spec.in
.github/workflows/: ci.yml
agents/: Makefile.am
control/: vm_install.xml
doc/: Makefile.am  command_line.txt  xen_autoyast_example.xml
package/: yast2-vm.changes  yast2-vm.spec
src/: .cvsignore  Makefile.am  RelocationServer.ycp  VM.ycp  VM_Common.ycp  VM_UML.ycp  VM_XEN.ycp  cmdline.ycp  complex.ycp  dom0_setup.ycp  helps.ycp  inst_uml_user.ycp  inst_vm_autoyast.ycp  inst_vm_disks.ycp  inst_vm_hardware.ycp  inst_vm_kickoff.ycp  inst_vm_manage.ycp  inst_vm_network.ycp  inst_vm_options.ycp  inst_vm_source.ycp  inst_xen_create.ycp  inst_xen_mode.ycp  relocation-server.desktop  relocation-server.ycp  uml.ycp  uml_user_proposal.ycp  virtualization.desktop  vm.desktop  vm.ycp  vm_autoyast_proposal.ycp  vm_disks_proposal.ycp  vm_finish.ycp  vm_helps_proposal.ycp  vm_network_proposal.ycp  vm_options_proposal.ycp  vm_source_proposal.ycp  wizards.ycp  xen.desktop  xen.ycp  xen_auto.ycp  (+1 more)
src/clients/: relocation-server.rb  virtualization.rb  vm_finish.rb  xen.rb  xen.ycp
src/desktop/: org.opensuse.yast.RelocationServer.desktop  org.opensuse.yast.VirtualizationConfig.desktop  relocation-server.desktop  virtualization-config.desktop
src/desktop/groups/: virtualization.desktop
src/include/relocation-server/: complex.rb  dialogs.rb  dialogs.ycp  helps.rb  helps.ycp  wizards.rb
src/modules/: RelocationServer.rb  VM_XEN.rb  VirtConfig.rb
src/scrconf/: xend.scr
vm/: .cvsignore  RPMNAME  yast2-vm.spec.in
vm/agents/: Makefile.am  etc_xen.scr
vm/control/: Makefile.am
vm/doc/autodocs/: Makefile.am
vm/package/: yast2-vm.changes
vm/src/: Makefile.am  VM.ycp  VM_Common.ycp  VM_XEN.ycp  cmdline.ycp  dom0_setup.ycp  inst_vm_autoyast.ycp  inst_vm_disks.ycp  inst_vm_hardware.ycp  inst_vm_kickoff.ycp  inst_vm_network.ycp  inst_vm_options.ycp  inst_vm_source.ycp  inst_xen_mode.ycp  vm_autoyast_proposal.ycp  vm_disks_proposal.ycp  vm_finish.ycp  vm_hardware_proposal.ycp  vm_helps_proposal.ycp  vm_network_proposal.ycp  vm_options_proposal.ycp  vm_source_proposal.ycp  xen.desktop  xen.ycp  xen_auto.ycp  xen_mode_proposal.ycp
