#
# Makefile.am for vm/src
#

groupdir = @desktopdir@/groups

client_DATA =			\
	xen.ycp			\
	vm_finish.ycp			

group_DATA =			\
	virtualization.desktop

desktop_DATA =			\
	xen.desktop

module_DATA =			\
	VM_XEN.ycp

EXTRA_DIST = $(client_DATA) $(module_DATA) $(group_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common
